--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
 #gif {
     visibility: hidden;
 }
+
+body {
+    text-align: center;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 300px;
+    }
+
+.image {
+    float: left;
+}
+
+.button {
+    color: white;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    border-radius : 24px;
+    background-color : #ED5A11;
+    margin-top : 16px;
+}
