--- a/style.css
+++ b/style.css
@@ -24,3 +24,15 @@ body {
     background-color : #ED5A11;
     margin-top : 16px;
 }
+
+.button2 {
+    color: #ED5A11;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    border-radius : 24px;
+    background-color : white;
+    margin-top : 16px;
+}
